# vit.cpp

./: CMakeLists.txt
ecas-scripts/: README.md  mat-mul.h
ecas-scripts/HW/: matmul.h  matvecmul.cpp  rmsnorm.h
ecas-scripts/HW/common/: config.h
ecas-scripts/SW/: Makefile  elementwise.cpp  rmsnorm.cpp  softmax.cpp  unary.cpp
ggml/: CMakeLists.txt
ggml/ecas-scripts/: FileParsing.py  cmd-cheatsheet.txt  mat-mul.c  test-mat-mul-cu.cpp  test-mat-mul.cpp  test-mul-mat.cpp
ggml/ecas-scripts/HW/: Makefile  elementwise.h  matvecmul.h  rmsnorm.cpp  softmax.h  unary.h
ggml/ecas-scripts/SW/: ad08.cpp  matvecmul.cpp
ggml/src/: CMakeLists.txt  ggml-impl.h  ggml-xrt.cpp  ggml-xrt.h  ggml.c
